--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -92,24 +92,24 @@ jobs:
           tag: ${{ inputs.ref || github.ref_name }}
 
       - name: Move docs to correct directory
-        if: ${{ github.ref_type === 'tag' && matrix.package == steps.format-tag.outputs.package }}
+        if: ${{ github.ref_type == 'tag' && matrix.package == steps.format-tag.outputs.package }}
         env:
           PACKAGE: ${{ steps.format-tag.outputs.package }}
           SEMVER: ${{ steps.format-tag.outputs.semver }}
         run: |
-          echo "docs/packages/${PACKAGE}/docs/docs.json > out/${PACKAGE}/${SEMVER}.json"
+          echo "docs/${PACKAGE}/docs/docs.json > out/${PACKAGE}/${SEMVER}.json"
           mkdir -p out/${PACKAGE}
-          mv docs/packages/${PACKAGE}/docs/docs.json out/${PACKAGE}/${SEMVER}.json
+          mv docs/${PACKAGE}/docs/docs.json out/${PACKAGE}/${SEMVER}.json
 
       - name: Move docs to correct directory
-        if: ${{ github.ref_type === 'branch' }}
+        if: ${{ github.ref_type == 'branch' }}
         env:
           PACKAGE: ${{ steps.format-tag.outputs.package }}
           SEMVER: ${{ steps.format-tag.outputs.semver }}
         run: |
-          echo "docs/packages/${PACKAGE}/docs/docs.json > out/${PACKAGE}/${GITHUB_REF_NAME}.json"
+          echo "docs/${PACKAGE}/docs/docs.json > out/${PACKAGE}/${GITHUB_REF_NAME}.json"
           mkdir -p out/${PACKAGE}
-          mv docs/packages/${PACKAGE}/docs/docs.json out/${PACKAGE}/${GITHUB_REF_NAME}.json
+          mv docs/${PACKAGE}/docs/docs.json out/${PACKAGE}/${GITHUB_REF_NAME}.json
 
       - name: Commit and push
         run: |
