--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -2,7 +2,7 @@ name: Documentation
 on:
   push:
     branches: ['main', 'v7']
-    # paths: ['./packages/*/src/**']
+    paths: ['./packages/*/src/**']
     tags: ['reciple@**', '@reciple/**']
   workflow_dispatch:
     inputs:
