--- a/package.json
+++ b/package.json
@@ -8,11 +8,11 @@
   "scripts": {
     "bootstrap": "npx lerna bootstrap",
     "clean": "npx rimraf ./packages/bin ./packages/dist",
-    "build": "npx lerna run build && npm run bootstrap",
+    "build": "npx lerna run build --no-private && npm run bootstrap",
     "watch": "npx tsc --watch --noEmit",
     "test": "node ./packages/reciple/bin/bin.mjs ./test -t env:TOKEN -y",
     "publish:dev": "npx lerna publish prerelease --no-private",
-    "docs": "npx lerna run docs"
+    "docs": "npx lerna run docs --no-private"
   },
   "devDependencies": {
     "@discordjs/docgen": "^0.12.1",
