--- a/packages/reciple/package.json
+++ b/packages/reciple/package.json
@@ -25,8 +25,6 @@
     "README.md"
   ],
   "dependencies": {
-    "@inquirer/confirm": "^0.0.28-alpha.0",
-    "@inquirer/password": "^0.0.28-alpha.0",
     "@reciple/client": "^7.0.0-dev.9",
     "chalk": "4.1.2",
     "commander": "^10.0.0",
@@ -34,10 +32,12 @@
     "fallout-utility": "^2.1.3",
     "globby": "^13.1.3",
     "micromatch": "^4.0.5",
+    "prompts": "^2.4.2",
     "yaml": "^2.2.1"
   },
   "devDependencies": {
     "@types/micromatch": "^4.0.2",
+    "@types/prompts": "^2.4.2",
     "discord.js": "^14.7.1"
   },
   "peerDependencies": {
