--- a/packages/create-reciple/templates/typescript/package.json
+++ b/packages/create-reciple/templates/typescript/package.json
@@ -7,7 +7,7 @@
   },
   "dependencies": {
     "discord.js": "^14",
-    "reciple": "^7"
+    "reciple": "^7.0.0-dev.14"
   },
   "devDependencies": {
     "typescript": "^4",
