--- a/packages/create-reciple/package.json
+++ b/packages/create-reciple/package.json
@@ -23,6 +23,8 @@
     "prompts": "^2.4.2"
   },
   "devDependencies": {
-    "@types/prompts": "^2.4.2"
+    "@types/prompts": "^2.4.2",
+    "discord.js": "^14.7.1",
+    "reciple": "^7.0.0-dev.14"
   }
 }
