--- a/packages/create-reciple/templates/typescript/package.json
+++ b/packages/create-reciple/templates/typescript/package.json
@@ -6,8 +6,8 @@
     "start": "npx reciple"
   },
   "dependencies": {
-    "discord.js": "^14",
-    "reciple": "^7.0.0-dev.14"
+    "discord.js": "DISCORDJS",
+    "reciple": "RECIPLE"
   },
   "devDependencies": {
     "typescript": "^4",
