--- a/packages/create-reciple/templates/typescript-esm/package.json
+++ b/packages/create-reciple/templates/typescript-esm/package.json
@@ -1,7 +1,7 @@
 {
   "name": "reciple-app",
   "private": true,
-  "type": "commonjs",
+  "type": "module",
   "scripts": {
     "build": "npx rimraf ./modules && npx tsc",
     "start": "npx reciple"
