--- a/lerna.json
+++ b/lerna.json
@@ -4,5 +4,6 @@
   "version": "independent",
   "exact": false,
   "preid": "dev",
-  "preDistTag": "dev"
+  "preDistTag": "dev",
+  "createRelease": "github"
 }
