--- a/packages/reciple/package.json
+++ b/packages/reciple/package.json
@@ -33,11 +33,13 @@
     "globby": "^13.1.3",
     "micromatch": "^4.0.5",
     "prompts": "^2.4.2",
+    "semver": "^7.3.8",
     "yaml": "^2.2.1"
   },
   "devDependencies": {
     "@types/micromatch": "^4.0.2",
     "@types/prompts": "^2.4.2",
+    "@types/semver": "^7.3.13",
     "discord.js": "^14.7.1"
   },
   "peerDependencies": {
