--- a/packages/reciple/package.json
+++ b/packages/reciple/package.json
@@ -2,7 +2,7 @@
   "name": "reciple",
   "description": "Reciple is a Discord.js handler",
   "license": "GPL-3.0",
-  "version": "7.0.0-dev.15",
+  "version": "7.0.0",
   "main": "./bin/index.js",
   "module": "./bin/esm.mjs",
   "types": "./bin/index.d.ts",
@@ -25,7 +25,7 @@
     "README.md"
   ],
   "dependencies": {
-    "@reciple/client": "^7.0.0-dev.10",
+    "@reciple/client": "^7.0.0",
     "chalk": "4.1.2",
     "commander": "^10.0.0",
     "dotenv": "^16.0.3",
