--- a/packages/reciple/package.json
+++ b/packages/reciple/package.json
@@ -3,12 +3,16 @@
   "description": "Reciple is a Discord.js handler",
   "homepage": "https://reciple.js.org/docs/reciple",
   "license": "GPL-3.0",
-  "version": "7.0.0",
+  "version": "7.0.1",
   "main": "./bin/index.js",
   "module": "./bin/esm.mjs",
   "types": "./bin/index.d.ts",
   "bin": "./bin/bin.mjs",
-  "keywords": ["reciple", "discord.js", "handler"],
+  "keywords": [
+    "reciple",
+    "discord.js",
+    "handler"
+  ],
   "repository": {
     "type": "git",
     "url": "https://github.com/FalloutStudios",
@@ -32,7 +36,7 @@
     "README.md"
   ],
   "dependencies": {
-    "@reciple/client": "^7.0.0",
+    "@reciple/client": "^7.0.1",
     "chalk": "4.1.2",
     "commander": "^10.0.0",
     "dotenv": "^16.0.3",
