private this time

--- a/packages/rmm/package.json
+++ b/packages/rmm/package.json
@@ -1,5 +1,6 @@
 {
   "name": "@reciple/rmm",
+  "private": true,
   "description": "Module manager for the default Reciple CLI",
   "homepage": "https://reciple.js.org/docs/rmm",
   "type": "module",
