--- a/lerna.json
+++ b/lerna.json
@@ -2,6 +2,7 @@
   "$schema": "node_modules/lerna/schemas/lerna-schema.json",
   "useWorkspaces": true,
   "version": "independent",
+  "createRelease": "github",
   "exact": false,
   "preid": "dev",
   "preDistTag": "dev"
