--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -10,7 +10,8 @@
   "keywords": [
     "reciple",
     "discord.js",
-    "handler"
+    "handler",
+    "client"
   ],
   "repository": {
     "type": "git",
