--- a/packages/reciple/package.json
+++ b/packages/reciple/package.json
@@ -11,7 +11,8 @@
   "keywords": [
     "reciple",
     "discord.js",
-    "handler"
+    "handler",
+    "commands"
   ],
   "repository": {
     "type": "git",
