--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -2,6 +2,7 @@ name: Documentation
 on:
   push:
     branches: ['main']
+    paths: ['**/src/**']
     tags: ['**']
   workflow_dispatch:
     inputs:
