--- a/lerna.json
+++ b/lerna.json
@@ -4,5 +4,7 @@
   "version": "independent",
   "exact": false,
   "preid": "dev",
-  "preDistTag": "dev"
+  "preDistTag": "dev",
+  "gitTagVersion": true,
+  "signGitTag": true
 }
