--- a/packages/reciple/package.json
+++ b/packages/reciple/package.json
@@ -3,7 +3,7 @@
   "description": "Reciple is a Discord.js handler",
   "homepage": "https://reciple.js.org/docs/reciple",
   "license": "GPL-3.0",
-  "version": "7.0.13-dev.13",
+  "version": "7.0.13",
   "main": "./bin/index.js",
   "module": "./bin/esm.mjs",
   "types": "./bin/index.d.ts",
@@ -37,7 +37,7 @@
     "README.md"
   ],
   "dependencies": {
-    "@reciple/client": "^7.0.8-dev.9",
+    "@reciple/client": "^7.0.8",
     "chalk": "4.1.2",
     "commander": "^10.0.0",
     "dotenv": "^16.0.3",
