add package.json to workflow paths

--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -2,7 +2,7 @@ name: Documentation
 on:
   push:
     branches: ['main']
-    paths: ['**/src/**']
+    paths: ['**/src/**', '**package.json']
     tags: ['**']
   workflow_dispatch:
 concurrency:
