maybe this would work?

--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -106,6 +106,7 @@ jobs:
           cd out
           git config user.name github-actions[bot]
           git config user.email 41898282+github-actions[bot]@users.noreply.github.com
+          git pull
           git add .
           git commit -m "Docs build for ${GITHUB_REF_TYPE} ${GITHUB_REF_NAME}: ${GITHUB_SHA}" || true
           git push
