--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -2,7 +2,7 @@ name: Documentation
 on:
   push:
     branches: ['main']
-    paths: ['**/src/**', '**package.json']
+    paths: ['**/reciple/src/**', '**/client/src/**', '**package.json']
     tags: ['**']
   workflow_dispatch:
 concurrency:
