--- a/packages/reciple/package.json
+++ b/packages/reciple/package.json
@@ -52,6 +52,7 @@
     "@types/micromatch": "^4.0.2",
     "@types/prompts": "^2.4.2",
     "@types/semver": "^7.3.13",
+    "@weichwarenprojekt/ts-importer": "^0.1.5",
     "discord.js": "^14.7.1"
   },
   "peerDependencies": {
