--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -35,8 +35,9 @@
     "README.md"
   ],
   "dependencies": {
-    "fallout-utility": "^2.2.0",
+    "fallout-utility": "^2.2.1",
     "lodash.defaultsdeep": "^4.6.1",
+    "reciple": "^7.1.3",
     "semver": "^7.3.8",
     "tiny-typed-emitter": "^2.1.0",
     "ts-mixer": "^6.0.2"
@@ -44,7 +45,7 @@
   "devDependencies": {
     "@types/lodash.defaultsdeep": "^4.6.7",
     "@types/semver": "^7.3.13",
-    "discord.js": "^14.7.1"
+    "discord.js": "^14.8.0"
   },
   "peerDependencies": {
     "discord.js": "^14.7.1"
