--- a/packages/create-reciple/templates/typescript/package.json
+++ b/packages/create-reciple/templates/typescript/package.json
@@ -10,7 +10,8 @@
     "reciple": "RECIPLE"
   },
   "devDependencies": {
-    "typescript": "^4",
-    "rimraf": "^4"
+    "@types/node": "^18.15.3",
+    "typescript": "^4.9.5",
+    "rimraf": "^4.4.0"
   }
 }
