--- a/package.json
+++ b/package.json
@@ -8,10 +8,10 @@
   ],
   "scripts": {
     "bootstrap": "npx lerna bootstrap",
-    "clean": "npx rimraf ./packages/bin ./packages/dist",
+    "clean": "npx rimraf ./packages/bin ./packages/dist ./node_modules/.bin",
     "build": "npx lerna run build --no-private",
     "watch": "npx tsc --watch --noEmit",
-    "test": "node ./packages/reciple/bin/bin.mjs ./test -t env:TOKEN",
+    "test": "node ./packages/reciple/bin/bin.mjs ./test -t env:TOKEN --shardmode",
     "publish:dev": "npx lerna publish prerelease --no-private",
     "docs": "npx lerna run docs --no-private",
     "postinstall": "npm run bootstrap"
