--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "clean": "npx rimraf ./packages/bin ./packages/dist ./node_modules/.bin",
     "build": "npx lerna run build --no-private",
     "watch": "npx tsc --watch --noEmit",
-    "test": "node ./packages/reciple/bin/bin.mjs ./test -t env:TOKEN --shardmode",
+    "test": "node ./packages/reciple/bin/bin.mjs ./test -t env:TOKEN",
     "publish:dev": "npx lerna publish prerelease --no-private",
     "docs": "npx lerna run docs --no-private",
     "postinstall": "npm run bootstrap"
