--- a/packages/create-reciple/package.json
+++ b/packages/create-reciple/package.json
@@ -3,7 +3,7 @@
   "license": "GPL-3.0",
   "version": "7.2.3",
   "type": "module",
-  "description": "Starter project for Reciple handler",
+  "description": "A Reciple Discord bot project builder",
   "types": "./bin/bin.d.ts",
   "bin": "./bin/bin.js",
   "repository": {
