--- a/packages/create-reciple/templates/typescript-esm/package.json
+++ b/packages/create-reciple/templates/typescript-esm/package.json
@@ -12,7 +12,7 @@
   },
   "devDependencies": {
     "@types/node": "^18.15.3",
-    "typescript": "^4.9.5",
-    "rimraf": "^4.4.0"
+    "typescript": "TYPESCRIPT",
+    "rimraf": "RIMRAF"
   }
 }
