--- a/packages/reciple/package.json
+++ b/packages/reciple/package.json
@@ -43,12 +43,14 @@
     "dotenv": "^16.0.3",
     "fallout-utility": "^2.3.0",
     "globby": "^13.1.3",
+    "lodash.merge": "^4.6.2",
     "micromatch": "^4.0.5",
     "prompts": "^2.4.2",
     "semver": "^7.3.8",
     "yaml": "^2.2.1"
   },
   "devDependencies": {
+    "@types/lodash.merge": "^4.6.7",
     "@types/micromatch": "^4.0.2",
     "@types/prompts": "^2.4.4",
     "@types/semver": "^7.3.13",
