--- a/packages/create-reciple/templates/typescript/package.json
+++ b/packages/create-reciple/templates/typescript/package.json
@@ -2,8 +2,8 @@
   "name": "reciple-app",
   "private": true,
   "scripts": {
-    "build": "npx rimraf ./modules && npx tsc",
-    "start": "npx reciple"
+    "build": "BIN_EXEC rimraf ./modules && BIN_EXEC tsc",
+    "start": "BIN_EXEC reciple"
   },
   "dependencies": {
     "discord.js": "DISCORDJS",
