--- a/packages/create-reciple/package.json
+++ b/packages/create-reciple/package.json
@@ -25,7 +25,7 @@
   ],
   "dependencies": {
     "@clack/prompts": "^0.6.3",
-    "chalk": "^5.2.0",
+    "kleur": "^4.1.5",
     "prompts": "^2.4.2"
   },
   "devDependencies": {
