--- a/packages/reciple/package.json
+++ b/packages/reciple/package.json
@@ -38,11 +38,11 @@
   ],
   "dependencies": {
     "@reciple/client": "^7.2.2",
-    "chalk": "4.1.2",
     "commander": "^10.0.0",
     "dotenv": "^16.0.3",
     "fallout-utility": "^2.3.0",
     "globby": "^13.1.3",
+    "kleur": "^4.1.5",
     "lodash.merge": "^4.6.2",
     "micromatch": "^4.0.5",
     "prompts": "^2.4.2",
