Changes - Replace test dir with example - Deprecate flags variable in reciple cli - Fix commander parses args outside bin

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "workspaces": [
     "packages/*",
-    "test"
+    "example"
   ],
   "scripts": {
     "bootstrap": "npx lerna bootstrap",
@@ -13,14 +13,13 @@
     "watch": "npx tsc --watch --noEmit",
     "test": "npx lerna run test",
     "publish:dev": "npx lerna publish prerelease",
-    "docs": "npx lerna run docs",
-    "postinstall": "npm run bootstrap"
+    "docs": "npx lerna run docs"
   },
   "devDependencies": {
     "@discordjs/docgen": "^0.12.1",
     "@types/node": "^18.15.11",
     "lerna": "^6.6.1",
-    "rimraf": "^4.4.1",
+    "rimraf": "^5.0.0",
     "ts-mixer": "^6.0.3",
     "typescript": "^5.0.4"
   }
