--- a/example/config.yml
+++ b/example/config.yml
@@ -2,7 +2,7 @@
 #   You can directly set the bot token as value or use token from env
 #   To use token from env set the value like this:
 #     token: env:TOKEN
-token: TOKEN
+token: env:TOKEN
 
 # Commands Config
 commands:
@@ -77,16 +77,13 @@ logger:
     # Enables log file
     enabled: true
     # Sets the log file folder
-    logsFolder: ./logs
-    # Latest log file name
-    file: latest.log
+    logsFolder: './logs'
 
 # Modules config
 modules:
   # Reciple modules folders
   #   You can add multiple folders by adding the folder path or using glob patterns
-  modulesFolders:
-    - ./modules
+  modulesFolders: ['./modules']
   # Excluded files or folders
   #   You can add the file/folder name or use glob patterns
   exclude: []
@@ -96,9 +93,9 @@ modules:
 # Discord.js client options
 client:
   intents:
-    - Guilds
-    - GuildMessages
-    - MessageContent
+    - 'Guilds'
+    - 'GuildMessages'
+    - 'MessageContent'
 
 # Don't change this value
-version: ^VERSION
+version: ^7.3.0
