--- a/example/package.json
+++ b/example/package.json
@@ -3,8 +3,9 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "start": "npx reciple",
-    "test": "node ../node_modules/reciple/bin/bin.mjs"
+    "start": "npx reciple -c config.yml",
+    "test": "node ../node_modules/reciple/bin/bin.mjs -c config.yml",
+    "shards": "node --experimental-import-meta-resolve shards.js -c config.yml"
   },
   "dependencies": {
     "discord.js": "^14.9.0",
