--- a/packages/create-reciple/package.json
+++ b/packages/create-reciple/package.json
@@ -30,6 +30,8 @@
   },
   "devDependencies": {
     "discord.js": "^14.9.0",
-    "reciple": "^7.4.0"
+    "nodemon": "^2.0.22",
+    "reciple": "^7.4.0",
+    "tsc-watch": "^6.0.4"
   }
 }
