--- a/packages/create-reciple/templates/javascript/package.json
+++ b/packages/create-reciple/templates/javascript/package.json
@@ -2,10 +2,14 @@
   "name": "reciple-app",
   "private": true,
   "scripts": {
-    "start": "BIN_EXEC reciple"
+    "start": "BIN_EXEC reciple",
+    "dev": "npx nodemon --exec \"SCRIPT_RUN start\" ./modules"
   },
   "dependencies": {
     "discord.js": "DISCORDJS",
     "reciple": "RECIPLE"
+  },
+  "devDependencies": {
+    "nodemon": "NODEMON"
   }
 }
