--- a/packages/create-reciple/templates/typescript/package.json
+++ b/packages/create-reciple/templates/typescript/package.json
@@ -3,7 +3,8 @@
   "private": true,
   "scripts": {
     "build": "BIN_EXEC rimraf ./modules && BIN_EXEC tsc",
-    "start": "BIN_EXEC reciple"
+    "start": "BIN_EXEC reciple",
+    "dev": "tsc-watch -p ./tsconfig.json --onCompilationStarted \"BIN_EXEC rimraf ./modules\" --onSuccess \"SCRIPT_RUN start\""
   },
   "dependencies": {
     "discord.js": "DISCORDJS",
@@ -11,6 +12,7 @@
   },
   "devDependencies": {
     "@types/node": "^18.15.3",
+    "tsc-watch": "TSC_WATCH",
     "typescript": "TYPESCRIPT",
     "rimraf": "RIMRAF"
   }
