--- a/packages/create-reciple/templates/javascript/package.json
+++ b/packages/create-reciple/templates/javascript/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "scripts": {
     "start": "BIN_EXEC reciple",
-    "dev": "npx nodemon --exec \"SCRIPT_RUN start\" ./modules"
+    "dev": "npx nodemon --exec \"SCRIPT_RUN start\" --watch ./modules"
   },
   "dependencies": {
     "discord.js": "DISCORDJS",
