--- a/.github/workflows/gh-release.yml
+++ b/.github/workflows/gh-release.yml
@@ -1,1 +1,16 @@
-
+name: Github Release
+on:
+  push:
+    tags: ['reciple@*', '@reciple/client@*']
+  workflow_dispatch:
+jobs:
+  release:
+    name: Release
+    runs-on: ubuntu-latest
+    steps:
+     - name: Checkout
+       uses: actions/checkout@v3
+     - name: Release
+       uses: softprops/action-gh-release@v1
+       with:
+        generate_release_notes: true
