--- a/.github/workflows/gh-release.yml
+++ b/.github/workflows/gh-release.yml
@@ -7,6 +7,7 @@ jobs:
   release:
     name: Release
     runs-on: ubuntu-latest
+    if: github.ref_type == 'tag'
     steps:
      - name: Checkout
        uses: actions/checkout@v3
