--- a/.github/workflows/gh-release.yml
+++ b/.github/workflows/gh-release.yml
@@ -13,5 +13,12 @@ jobs:
        uses: actions/checkout@v3
      - name: Release
        uses: softprops/action-gh-release@v1
+       if: ${{ !contains(github.ref_name, '-dev.') }}
        with:
         generate_release_notes: true
+     - name: Pre-release
+       uses: softprops/action-gh-release@v1
+       if: ${{ contains(github.ref_name, '-dev.') }}
+       with:
+         prerelease: true
+         generate_release_notes: true
