--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -38,6 +38,7 @@
     "fallout-utility": "^2.4.3",
     "kleur": "^4.1.5",
     "semver": "^7.5.0",
+    "strip-ansi": "^6.0.1",
     "ts-mixer": "^6.0.2"
   },
   "devDependencies": {
