--- a/.github/workflows/gh-release.yml
+++ b/.github/workflows/gh-release.yml
@@ -1,7 +1,7 @@
 name: Github Release
 on:
   push:
-    tags: ['reciple@*', '@reciple/client@*']
+    tags: ['*']
   workflow_dispatch:
 jobs:
   release:
