--- a/.github/workflows/gh-release.yml
+++ b/.github/workflows/gh-release.yml
@@ -1,8 +1,12 @@
 name: Github Release
 on:
   push:
-    tags: ['*']
+    branches: ['main']
+    tags: ['*reciple@*', '@reciple/*@*']
   workflow_dispatch:
+concurrency:
+  group: ${{ github.workflow }}-${{ github.head_ref || github.ref }}
+  cancel-in-progress: true
 jobs:
   release:
     name: Release
