load npm loader after all modules

--- a/example/config.yml
+++ b/example/config.yml
@@ -83,7 +83,9 @@ logger:
 modules:
   # Reciple modules folders
   #   You can add multiple folders by adding the folder path or using glob patterns
-  modulesFolders: ['./modules']
+  modulesFolders:
+    - './modules'
+    - './modules/npmLoader' # Load npm loader last to prevent duplicate loaded module
   # Excluded files or folders
   #   You can add the file/folder name or use glob patterns
   exclude: []
