--- a/.github/workflows/delete-old-docs.yml
+++ b/.github/workflows/delete-old-docs.yml
@@ -8,6 +8,8 @@ jobs:
   remove-docs:
     name: Delete Docs Data
     runs-on: ubuntu-latest
+    env:
+      REF_NAME: ${{ github.event.ref }}
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
@@ -15,18 +17,18 @@ jobs:
           ref: 'docs'
 
       - name: Delete @reciple/client docs data
-        run: rm ./client/${{ github.ref_name }}.json
+        run: rm ./client/${REF_NAME}.json
 
       - name: Delete reciple docs data
-        run: rm ./reciple/${{ github.ref_name }}.json
+        run: rm ./reciple/${REF_NAME}.json
 
       - name: Delete @reciple/npm-loader docs data
-        run: rm ./npm-loader/${{ github.ref_name }}.json
+        run: rm ./npm-loader/${REF_NAME}.json
 
       - name: Update branch
         run: |
           git config user.name github-actions[bot]
           git config user.email 41898282+github-actions[bot]@users.noreply.github.com
           git add .
-          git commit -m "Deleted docs data for ${{ github.ref_name }}"
+          git commit -m "Deleted docs data for ${REF_NAME}"
           git push
