--- a/.github/workflows/gh-release.yml
+++ b/.github/workflows/gh-release.yml
@@ -1,7 +1,9 @@
 name: Github Release
 on:
   push:
-    tags: ['**']
+    tags:
+      - 'reciple*'
+      - '@reciple/*'
   workflow_dispatch:
 concurrency:
   group: ${{ github.workflow }}-${{ github.head_ref || github.ref }}
