--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -3,7 +3,7 @@
   "description": "Reciple client and builder classes",
   "homepage": "https://reciple.js.org/docs/client",
   "license": "GPL-3.0",
-  "version": "7.6.0-dev.6",
+  "version": "7.6.0",
   "main": "./dist/index.js",
   "module": "./dist/esm.mjs",
   "types": "./dist/index.d.ts",
