--- a/example/package.json
+++ b/example/package.json
@@ -8,8 +8,8 @@
     "shards": "node --experimental-import-meta-resolve shards.js -c config.yml"
   },
   "dependencies": {
+    "@reciple/npm-loader": "^7.2.1",
     "discord.js": "^14.10.2",
-    "reciple": "^7.3.0",
-    "@reciple/npm-loader": "^7.0.0"
+    "reciple": "^7.3.0"
   }
 }
