--- a/packages/reciple/package.json
+++ b/packages/reciple/package.json
@@ -38,6 +38,7 @@
   ],
   "dependencies": {
     "@reciple/client": "^7.6.1",
+    "@reciple/update-checker": "^7.0.0",
     "commander": "^10.0.1",
     "dotenv": "^16.0.3",
     "fallout-utility": "^2.5.1",
