--- a/packages/update-checker/package.json
+++ b/packages/update-checker/package.json
@@ -26,7 +26,7 @@
   "scripts": {
     "clean": "npx rimraf ./dist",
     "build": "npm run clean && npx tsc",
-    "docs": "npx docgen -i ./src/module.ts -c ./docs/custom.json -o ./docs/docs.json --typescript"
+    "docs": "npx docgen -i ./src/index.ts -c ./docs/custom.json -o ./docs/docs.json --typescript"
   },
   "files": [
     "dist",
