--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -4,7 +4,7 @@ on:
     branches: ['main']
     paths:
       - 'packages/*/src/**'
-    tags: ['reciple@*', '@reciple/client@*', '@reciple/npm-loader@*']
+    tags: ['reciple@*', '@reciple/client@*', '@reciple/npm-loader@*', '@reciple/update-checker@*']
   workflow_dispatch:
 concurrency:
   group: ${{ github.workflow }}-${{ github.head_ref || github.ref }}
