--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -46,7 +46,7 @@ jobs:
       max-parallel: 1
       fail-fast: false
       matrix:
-        package: ['reciple', 'client', 'npm-loader']
+        package: ['reciple', 'client', 'npm-loader', 'update-checker']
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
