--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -5,7 +5,7 @@ on:
     paths:
       - 'packages/*/src/**'
       - 'packages/*/package.json'
-    tags: ['**']
+    tags: ['reciple@*', '@reciple/client@*', '@reciple/npm-loader@*', '@reciple/update-checker@*']
   workflow_dispatch:
 concurrency:
   group: ${{ github.workflow }}-${{ github.head_ref || github.ref }}
