repair by lerna

--- a/nx.json
+++ b/nx.json
@@ -35,5 +35,16 @@
         "{projectRoot}/src/**/*"
       ]
     }
+  },
+  "$schema": "./node_modules/nx/schemas/nx-schema.json",
+  "namedInputs": {
+    "default": [
+      "{projectRoot}/**/*",
+      "sharedGlobals"
+    ],
+    "sharedGlobals": [],
+    "production": [
+      "default"
+    ]
   }
 }
