revert to lerna 6

--- a/lerna.json
+++ b/lerna.json
@@ -4,5 +4,6 @@
   "exact": false,
   "preid": "dev",
   "preDistTag": "dev",
-  "gitTagVersion": true
+  "gitTagVersion": true,
+  "useWorkspaces": true
 }
