--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -5,7 +5,7 @@ on:
     paths:
       - 'packages/*/src/**'
       - 'packages/*/package.json'
-    tags: ['*']
+    tags: ['**']
   workflow_dispatch:
 concurrency:
   group: ${{ github.workflow }}-${{ github.head_ref || github.ref }}
