--- a/packages/update-checker/package.json
+++ b/packages/update-checker/package.json
@@ -38,6 +38,7 @@
   "dependencies": {
     "@types/semver": "^7.5.0",
     "axios": "^1.4.0",
+    "package-json": "^8.1.1",
     "semver": "^7.5.1"
   }
 }
